--- a/cena.1/cena1.html
+++ b/cena.1/cena1.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <title>cena1</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"content="autor: Davi e Gabriele"/>
-    <title>Document</title>
+    <title>Cena1</title>
 </head>
 <body>
-    
+    <canvas id="canvas" width="100%"></canvas>
+    <script src="js/cena1.js"></script>
 </body>
 </html>
