--- a/cena.1/cena1.html
+++ b/cena.1/cena1.html
@@ -8,7 +8,7 @@
     <title>Cena1</title>
 </head>
 <body>
-    <canvas id="canvas" width="100%"></canvas>
+    <canvas id="canvas" width="1000px" height="1000px"></canvas>
     <script src="js/cena1.js"></script>
 </body>
 </html>
